Add private preferences document
